--- a/connect.html
+++ b/connect.html
@@ -20,17 +20,10 @@
             <a href="connect.html">Connect</a>
         </nav>
     </header>
-    <div>
-        <img src="linkedin.png" alt=LinkedIn.">
-        <div>
-            <h1>LinkedIn</h1>
-            <p>URL: linkedin.com/sashajohnson1</p>
-        </div>
-        <img src="instagram.png" alt=Instagram.">
-        <div>
-            <h2>Instagram</h2>
-            <p>IG handle: sashjohnson_</p>
-        </div>
+    <!-- <img src="linkedin.png" alt=LinkedIn."> -->
+    <div id="socials">
+        <a href="https://www.linkedin.com/in/sashajohnson1"><img src="linkedin.png" alt=LinkedIn."></a>
+        <a href="https://github.com/SashaJohnson123"><img src="GitHub-Mark.png" alt=GitHub."></a>
     </div>
 
 </body>
