--- a/home.html
+++ b/home.html
@@ -9,13 +9,18 @@
     <meta name="author" content="Sasha Johnson">
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script type="text/javascript" src="title.js"></script> -->
+    <!-- <script type="text/javascript" src="title.js"></script> -->
     <!-- <link rel="stylesheet" href="styles.css"> -->
 </head>
 
 <body>
     <header>
         <img src="Sasha2.jpg" alt="Sasha Johnson.">
-        <h1>Hi, I'm Sasha!</h1>
+        <!-- <h1>Hi, I'm Sasha!</h1> -->
+        <div class="typing-animation">
+            <span id="quote"></span>
+        </div>
         <nav>
             <a href="home.html">Home</a>
             <a href="myprojects.html">Projects</a>
