adding photo files

--- a/Code/home.html
+++ b/Code/home.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <img src="Sasha2.jpg" alt="Sasha Johnson.">
-        <!-- <h1>Hi, I'm Sasha!</h1> -->
+        <h1>Hi, I'm Sasha!</h1>
         <div class="typing-animation">
             <span id="quote"></span>
         </div>
