--- a/home.html
+++ b/home.html
@@ -1,53 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Sasha's Portfolio</title>
-    <meta name="description" content="SheCodes Cupcakes">
-    <meta name="author" content="Sasha Johnson">
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="SheCodes Cupcakes" />
+    <meta name="author" content="Sasha Johnson" />
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script type="text/javascript" src="title.js"></script> -->
     <!-- <script type="text/javascript" src="title.js"></script> -->
     <!-- <link rel="stylesheet" href="styles.css"> -->
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <img src="Sasha2.jpg" alt="Sasha Johnson.">
-        <h1>Hi, I'm Sasha!</h1>
-        <div class="typing-animation">
-            <span id="quote"></span>
-        </div>
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="myprojects.html">Projects</a>
-            <a href="contactme.html">Contact Me</a>
-            <a href="connect.html">Connect</a>
-        </nav>
+      <img src="Sasha2.jpg" alt="Sasha Johnson." />
+      <h1>Hi, I'm Sasha!</h1>
+      <div class="typing-animation">
+        <span id="quote"></span>
+      </div>
+      <nav>
+        <a href="home.html">Home</a>
+        <a href="myprojects.html">Projects</a>
+        <a href="contactme.html">Contact Me</a>
+        <a href="connect.html">Connect</a>
+      </nav>
     </header>
-    <h2>[Welcome to my SheCodes 2020 Plus Portfolio]</h2>
+    <h2>Welcome to my SheCodes 2020 Plus Portfolio</h2>
     <div>
-        <p>Hi, I'm Sasha! I'm a SheCodes 2020 Plus Participant, a Barista, Fitness Instructor and (to be admitted)
-            Lawyer!
-
-            I'm a recent Law and Science Graduate, with a Masters degree in International Law. I've lived in a few
-            countries during my studies, undertaking internships and a few awesome student exchange programs, learning a
-            few languages along the way. I always love to give back to the local community where I can. I am currently
-            pursuing my legal career within the Native Title sector, working closely with Traditional Owners and rural
-            and remote communities in the Pilbara.
-
-            I'd love to meet you - come say hi! </p>
+      <p>
+        Hi, I'm Sasha! I'm a SheCodes 2020 Plus Participant, a Barista, Fitness
+        Instructor and (to be admitted) Lawyer! I'm a recent Law and Science
+        Graduate, with a Masters degree in International Law. I've lived in a
+        few countries during my studies, undertaking internships and a few
+        awesome student exchange programs, learning a few languages along the
+        way. I always love to give back to the local community where I can. I am
+        currently pursuing my legal career within the Native Title sector,
+        working closely with Traditional Owners and rural and remote communities
+        in the Pilbara. I'd love to meet you - come say hi!
+      </p>
     </div>
 
-
-
-    <footer>
-        --- Sasha Johnson Copyright ---
-    </footer>
-
-</body>
-
+    <footer>--- Sasha Johnson Copyright ---</footer>
+  </body>
 </html>
