--- a/myprojects.html
+++ b/myprojects.html
@@ -1,47 +1,109 @@
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Sasha's Portfolio</title>
-    <meta name="description" content="SheCodes Cupcakes">
-    <meta name="author" content="Sasha Johnson">
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="SheCodes Cupcakes" />
+    <meta name="author" content="Sasha Johnson" />
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="styles.css"> -->
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>My Projects</h1>
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="myprojects.html">Projects</a>
-            <a href="contactme.html">Contact Me</a>
-            <a href="connect.html">Connect</a>
-        </nav>
+      <h1>My Projects</h1>
+      <nav>
+        <a href="home.html">Home</a>
+        <a href="myprojects.html">Projects</a>
+        <a href="contactme.html">Contact Me</a>
+        <a href="connect.html">Connect</a>
+      </nav>
     </header>
 
     <div>
-        <div>
-            <h1>Project 1</h1>
-            <p>HTML/ CSS: This website!</p>
+      <div>
+        <h1>Project 1: HTML/ CSS</h1>
+        <p>
+          Objective: To create a portfolio site to showcase your work. Your
+          portfolio site should represent you, it should still have your own
+          personal style.
+        </p>
+        <p>Outcome: This website!</p>
+      </div>
+      <div>
+        <h2>Project 2: Python</h2>
+        <p>Objective:</p>
+        <p>
+          1. Forecast Summary: You have been provided with two different kinds
+          of json files containing weather data for Perth. One contains the 5
+          day forecast, the other contains historical data for a 24 hour period.
+          Your job is to convert this data into something useful.
+        </p>
+        <p>
+          2. Forecast Graphs: Produce a Python script that produces the
+          following graphs: (2.1) A single time series graph that contains both
+          the minimum and maximum temperatures for each day; and (2.2) A single
+          time series graph that contains the minimum, minimum “real feel”, and
+          minimum “real feel shade” temperatures.
+        </p>
+        <p>Outcome:</p>
+        <div class="image-container">
+          <img class="image" src="public/Images/python-1.png" />
+          <img class="image" src="public/Images/python-1.2png" />
+          <img class="image" src="public/Images/python-2png" />
+          <img class="image" src="public/Images/python-2.1.png" />
         </div>
-        <div>
-            <h2>Project 2</h2>
-            <p>Python!</p>
+      </div>
+      </div>
+      <div>
+        <h3>Project 3: Django</h3>
+        <p>
+          Objective: You are going to be creating websites for She Codes News!
+          Hurrah! You are to create a news website that allows users to read
+          news stories, and authors to create them.
+        </p>
+        <p>Outcome:</p>
+        <div class="image-container">
+          <img class="image" src="public/Images/django-author.png" />
+          <img class="image" src="public/Images/loggedin.png" />
+          <img class="image" src="public/Images/not-loggedin.png" />
+          <img class="image" src="public/Images/update-story.png" />
         </div>
-        <div>
-            <h3>Project 3</h3>
-            <p>Django!</p>
-        </div>
-        <div>
-            <h4>Project 4</h4>
-            <p>React!</p>
-        </div>
-        <div>
-            <h5>Final Project</h5>
-            <p>Suprise!</p>
-        </div>
+      </div>
+      <div>
+        <h4>Project 4: React</h4>
+        <p>
+          Objective: To provide a platform for people to fund projects that they
+          believe in and are truly passionate about. You are going to create
+          your own crowdfunding website, and put your own spin on it!
+        </p>
+        <p>Outcome:</p>
+        <a href="https://limitless-coast-95934.herokuapp.com/projects/"
+          >Django Rest Framework (DRF)</a
+        >
+        <a href="http://pacific-sea-64450.herokuapp.com/">Django React App</a>
+      </div>
+      <div>
+        <h5>
+          Final Group Project: SheCodes Mentor and Event Portal!
+        </h5>
+        <p>Group Name: "Works on my Machine!"</p>
+        <p>
+          Objective (The Problem): Inefficiences identified within the current
+          SheCodes Onboarding Process - such as: Multiple tools being used to
+          manage the onboarding process, Generic tools that do not currently
+          integrate well, Shared between staff but updated separately,
+          Completion of tasks requires admin email/verbal between staff, and She
+          Codes event and mentor lists growing (and growing!)
+        </p>
+        <p>Outcome:</p>
+        <a href="https://shecodes-portal-drf.herokuapp.com/"
+          >SheCodes DRF Mentor and Event Portal</a
+        >
+        <a href="https://shecodes-portal-react.herokuapp.com/"
+          >SheCodes Live Mentor and Event Portal App</a
+        >
+      </div>
     </div>
-
-</body>
+  </body>
+</html>
