--- a/myprojects.html
+++ b/myprojects.html
@@ -97,7 +97,7 @@
           Codes event and mentor lists growing (and growing!)
         </p>
         <p>Outcome:</p>
-        <a href="DRF"
+        <a href="https://shecodes-portal-drf.herokuapp.com/users/"
           >SheCodes DRF Mentor and Event Portal</a
         >
         <a href="https://shecodes-portal-react.herokuapp.com/"
