--- a/myprojects.html
+++ b/myprojects.html
@@ -49,8 +49,8 @@
         <p>Outcome:</p>
         <div class="image-container">
           <img class="image" src="public/Images/python-1.png" />
-          <img class="image" src="public/Images/python-1.2png" />
-          <img class="image" src="public/Images/python-2png" />
+          <img class="image" src="public/Images/python-1.2.png" />
+          <img class="image" src="public/Images/python-2.png" />
           <img class="image" src="public/Images/python-2.1.png" />
         </div>
       </div>
