Added in Footer across all pages

--- a/connect.html
+++ b/connect.html
@@ -1,29 +1,33 @@
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Sasha's Portfolio</title>
-    <meta name="description" content="SheCodes Cupcakes">
-    <meta name="author" content="Sasha Johnson">
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="SheCodes Cupcakes" />
+    <meta name="author" content="Sasha Johnson" />
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="styles.css"> -->
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Connect with me!</h1>
-        <nav>
-            <a href="home.html">Home</a>
-            <a href="myprojects.html">Projects</a>
-            <a href="contactme.html">Contact Me</a>
-            <a href="connect.html">Connect</a>
-        </nav>
+      <h1>Connect with me!</h1>
+      <nav>
+        <a href="home.html">Home</a>
+        <a href="myprojects.html">Projects</a>
+        <a href="contactme.html">Contact Me</a>
+        <a href="connect.html">Connect</a>
+      </nav>
     </header>
     <!-- <img src="linkedin.png" alt=LinkedIn."> -->
     <div id="socials">
-        <a href="https://www.linkedin.com/in/sashajohnson1"><img src="linkedin.png" alt=LinkedIn."></a>
-        <a href="https://github.com/SashaJohnson123"><img src="GitHub-Mark.png" alt=GitHub."></a>
+      <a href="https://www.linkedin.com/in/sashajohnson1"
+        ><img src="linkedin.png" alt=LinkedIn."></a
+      >
+      <a href="https://github.com/SashaJohnson123"
+        ><img src="GitHub-Mark.png" alt=GitHub."></a
+      >
     </div>
-
-</body>
+    <footer>--- Sasha Johnson Copyright ---</footer>
+  </body>
+</html>
