Updated Linkedin URL

--- a/connect.html
+++ b/connect.html
@@ -21,7 +21,7 @@
     </header>
     <!-- <img src="linkedin.png" alt=LinkedIn."> -->
     <div id="socials">
-      <a href="https://www.linkedin.com/in/sashajohnson1"
+      <a href="https://www.linkedin.com/in/sashajohnson1/"
         ><img src="linkedin.png" alt=LinkedIn."></a
       >
       <a href="https://github.com/SashaJohnson123"
