Updated Photo across all pages

--- a/contactme.html
+++ b/contactme.html
@@ -13,8 +13,7 @@
 
   <body>
     <header>
-      <!-- <h1>Get in touch!</h1> -->
-      <!-- <img src="Sasha2.jpg" alt="Sasha Johnson."> -->
+      <img src="Sasha2.jpg" alt="Sasha Johnson." />
       <h1>Get in touch!</h1>
       <nav>
         <a href="home.html">Home</a>
