--- a/connect.html
+++ b/connect.html
@@ -11,6 +11,7 @@
 
   <body>
     <header>
+      <img src="Sasha2.jpg" alt="Sasha Johnson." />
       <h1>Connect with me!</h1>
       <nav>
         <a href="home.html">Home</a>
